add list of blog entries from db to display

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Welcome to My Blog</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
   </head>
   <body>
       <div class="header" display="block">
@@ -18,13 +19,11 @@
           <div class="row">
 
               <div class="column1">
-                  <div id="list">
-                      <ul class="list-group">
-                          <li><a href="#/posts/100" class="list-group-item">entry1</a><br></li>
-                          <li><a href="#/posts/101" class="list-group-item">entry2</a><br></li>
-                          <li><a href="#/posts/102" class="list-group-item">entry3</a><br></li>
-                      </ul>
-                  </div>
+                <ul id="entryList">
+                    <!-- <li><a href="#/posts/100" class="list-group-item">entry1</a><br></li>
+                    <li><a href="#/posts/101" class="list-group-item">entry2</a><br></li>
+                    <li><a href="#/posts/102" class="list-group-item">entry3</a><br></li> -->
+                </ul>
               </div>
 
               <div class="column2">
