post to db from button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <label for="content">Content:</label><br>
                     <input type="text" id="content"><br>
                     <br>
-                    <button type="button" name="button">Create New Post</button>
+                    <button type="button" onclick="postEntry()">Create New Post</button>
                   </form>
                 </div>
               </div>
