--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                     <button type="button" onclick="postEntry()">Create New Post</button>
                   </form>
                 </div>
+                <div id="displayBlog">
+                  <!-- <h1 id="displayTitle">Title goes here</h1> -->
+                </div>
               </div>
-
           </div>
       </div>
 
