show blog entry on clicking entry

--- a/index.html
+++ b/index.html
@@ -34,12 +34,17 @@
                     <br>
                     <label for="content">Content:</label><br>
                     <input type="text" id="content"><br>
+                    <!-- <textarea id="content"></textarea> -->
                     <br>
                     <button type="button" onclick="postEntry()">Create New Post</button>
                   </form>
                 </div>
                 <div id="displayBlog">
                   <!-- <h1 id="displayTitle">Title goes here</h1> -->
+                  <nav align="right">
+                    <a id=editLink href="#">Edit</a>
+                    <a id=deleteLink href="#">Delete</a>
+                  </nav>
                 </div>
               </div>
           </div>
