--- a/public/index.html
+++ b/public/index.html
@@ -33,18 +33,13 @@
                     <input type="text" id="title">
                     <br>
                     <label for="content">Content:</label><br>
-                    <input type="text" id="content"><br>
-                    <!-- <textarea id="content"></textarea> -->
+                    <textarea type="text" id="content"></textarea><br>
                     <br>
                     <button type="button" onclick="postEntry()">Create New Post</button>
                   </form>
                 </div>
                 <div id="displayBlog">
                   <!-- <h1 id="displayTitle">Title goes here</h1> -->
-                  <nav align="right">
-                    <a id=editLink href="#">Edit</a>
-                    <a id=deleteLink href="#">Delete</a>
-                  </nav>
                 </div>
               </div>
           </div>
