add delete function removing posts from db

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
                   </form>
                 </div>
                 <div id="displayBlog">
-                  <!-- <h1 id="displayTitle">Title goes here</h1> -->
+                  <!-- displays title and contents of blog post -->
                 </div>
               </div>
           </div>
